# ChessGame

./: CMakeLists.txt  ChessGame-copy.pro  ChessGame.pro  README.md  casillero.cpp  casillero.h  chronometer.cpp  chronometer.h  filemovementpiecemanager.cpp  filemovementpiecemanager.h  fileuimanageropen.cpp  fileuimanageropen.h  fileuimanagersave.cpp  fileuimanagersave.h  horse.cpp  horse.h  locker.cpp  locker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managerviewpiecekilled.cpp  managerviewpiecekilled.h  menugame.cpp  menugame.h  movementpiece.cpp  movementpiece.h  notification.cpp  notification.h  notificationmanager.cpp  notificationmanager.h  piece.cpp  piece.h  pieceAlfil.cpp  pieceAlfil.h  pieceHorse.cpp  pieceHorse.h  pieceKing.cpp  pieceKing.h  (+11 more)
